--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -2,6 +2,27 @@
   margin: 0;
 }
 
+:root {
+  --background-light: #ffffff;
+  --text-light: #000000;
+  --background-dark: #333333;
+  --text-dark: #ffffff;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--background-light);
+  color: var(--text-light);
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.dark-mode {
+  background-color: var(--background-dark);
+  color: var(--text-dark);
+}
+
 header {
   border: 5px solid black;
 }
@@ -14,11 +35,13 @@ header {
 .row {
   width: 100%;
   margin-top: 5px;
+  display: flex;
 }
 
 #landing-page-image,
 #landing-page-form {
   height: 600px;
+  width: 50%;
   margin: 20px;
   padding: 20px;
   border: 5px solid black;
@@ -28,6 +51,15 @@ header {
 #landing-page-form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+#landing-page-form input {
+  height: 30px;
+}
+
+#landing-page-form * {
+  margin: 10px;
 }
 
 #landing-page-image {
@@ -40,7 +72,6 @@ header {
   margin-bottom: 50px;
   margin-left: 0;
   margin-right: 20px;
-
   border-radius: 600px;
 }
 
@@ -48,4 +79,11 @@ header {
   font-size: xx-large;
   text-align: center;
   font-weight: bolder;
+}
+
+@media only screen and (max-width: 1000px) {
+  .row {
+    flex-direction: column;
+    align-items: center;
+  }
 }
